--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,28 @@
         <h1>Battleship</h1>
     </header>
     <main>
-        <div class="game-container">
-            <div class="board-container">
-                <h2>Your Fleet</h2>
-                <div id="player-board" class="board"></div>
-            </div>
-            <div class="board-container">
-                <h2>Enemy Waters</h2>
-                <div id="computer-board" class="board"></div>
-            </div>
+        <div id="setup-screen">
+            <input type="text" id="player-name" placeholder="Enter your name">
+            <button id="start-game">Start Game</button>
         </div>
-        <div id="message-box"></div>
+        <div id="game-screen" style="display: none;">
+            <div class="game-controls">
+                <button id="randomize-ships">Randomize Ships</button>
+                <button id="reset-game">Reset Game</button>
+            </div>
+            <div class="game-container">
+                <div class="board-container">
+                    <h2>Your Fleet</h2>
+                    <div id="player-board" class="board"></div>
+                </div>
+                <div class="board-container">
+                    <h2>Enemy Waters</h2>
+                    <div id="computer-board" class="board"></div>
+                </div>
+            </div>
+            <div id="turn-display"></div>
+            <div id="message-box"></div>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Battleship Game. All rights reserved.</p>
